- Refactor `RestaurantServiceTest` to replace `getFirst()` with `get(0)` for consistent list handling. - Update project to use Java 17 in `pom.xml`. - Add `.gitignore` and Node.js project files (`package.json`, `package-lock.json`) for frontend integration. - Expand `README.md` with detailed setup instructions for the full-stack application.